# madome-sdk-rs

./: Cargo.toml  bind_localhost.yml  serve.sh
madome-sdk-macros/: Cargo.toml
madome-sdk-macros/src/: lib.rs
src/: lib.rs
src/api/: cookie.rs  error.rs  header.rs  macros.rs  mod.rs  token.rs
src/api/auth/: def.rs  error.rs  mod.rs  model.rs
src/api/old_library/: def.rs  error.rs  mod.rs  model.rs  payload.rs
src/api/user/: def.rs  error.rs  mod.rs  model.rs  payload.rs
src/auth/: mod.rs  model.rs
src/client/: base_url.rs  mod.rs  store.rs
src/tests/auth/: mod.rs
src/user/: mod.rs
