[package]
name = "madome-sdk"
version = "0.1.0"
edition = "2021"

[features]
server = []
client = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.30"
http = "0.2.6"
uuid = { version = "0.8.2", features = ["serde"] }
util = { git = "https://github.com/syrflover/util-rs", tag = "0.1.5" }
parking_lot = "0.12.0"
log = "0.4.14"
serde_qs = "0.8.5"
