[package]
name = "madome-sdk"
version = "0.1.0"
edition = "2021"

[features]
e2e = []
server = []
client = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
http = "0.2"
uuid = { version = "0.8", features = ["serde"] }
util = { git = "https://github.com/syrflover/util-rs", tag = "0.3.2" }
parking_lot = "0.12"
log = "0.4"
serde_qs = "0.8"
bytes = "1.1"
either = { version = "1.6", features = ["serde"] }
madome-sdk-macros = { path = "./madome-sdk-macros" }
serde_path = { git = "https://github.com/syrflover/serde_path", tag = "0.1.0" }
# serde_path = { path = "../serde_path" }

# for e2e feature
tokio = { version = "1.17", features = ["macros"] }
hyper = { version = "0.14", features = ["server"] }
# simple_logger = "2.1"
